src-tauri/src/c/inc/ControlCANFDx64.h

//Explanation: If it is a Qt development environment, please open the following type macro definitions
/*
#define UINT    unsigned int
#define BYTE    unsigned char
#define USHORT  unsigned short
#define UCHAR   unsigned char
#define UINT64  unsigned long long
#define CHAR    char
#define DWORD   unsigned int
#define ULONG   unsigned long
#define PVOID   void *
#define INT     int
*/

//Definition of Interface Card Type
#define ZCAN_USBCANFD_200U			41
#define VCI_USBCAN_E_U 				20
#define VCI_USBCAN_2E_U 			21
//Function call returns status value
#define STATUS_ERR					0
#define	STATUS_OK					1
#define STATUS_ONLINE               2
#define	STATUS_OFFLINE              3
#define STATUS_UNSUPPORTED          4
#define INVALID_CHANNEL_HANDLE 		0
#define INVALID_DEVICE_HANDLE 		0
	
/* special address description flags for the MAKE_CAN_ID */
#define CAN_EFF_FLAG 0x80000000U /* EFF/SFF is set in the MSB */ 
#define CAN_RTR_FLAG 0x40000000U /* remote transmission request */
#define CAN_ERR_FLAG 0x20000000U /* error message frame */
#define CAN_ID_FLAG  0x1FFFFFFFU /* id */
/* valid bits in CAN ID for frame formats */
#define CAN_SFF_MASK 0x000007FFU /* standard frame format (SFF) */
#define CAN_EFF_MASK 0x1FFFFFFFU /* extended frame format (EFF) */
#define CAN_ERR_MASK 0x1FFFFFFFU /* omit EFF, RTR, ERR flags */
#define CAN_MAX_DLEN		8
#define CANFD_MAX_DLEN		64
typedef struct {
UINT	can_id;  /*  32 bit MAKE_CAN_ID + EFF/RTR/ERR flags */
BYTE    can_dlc; /*  frame payload length in byte (0 .. CAN_MAX_DLEN) */
BYTE    __pad;   /*  padding */
BYTE    __res0;  /*  reserved / padding */ 
BYTE    __res1;  /*  reserved / padding */
BYTE    data[CAN_MAX_DLEN]/* __attribute__((aligned(8)))*/;
}can_frame;
typedef struct {
UINT    can_id;  /*  32 bit MAKE_CAN_ID + EFF/RTR/ERR flags */
BYTE    len;     /*  frame payload length in byte */
BYTE    flags;   /*  additional flags for CAN FD,i.e error code */
BYTE    __res0;  /*  reserved / padding */
BYTE    __res1;  /*  reserved / padding */
BYTE    data[CANFD_MAX_DLEN]/* __attribute__((aligned(8)))*/;
}canfd_frame;
#define TYPE_CAN   0
#define TYPE_CANFD 1