src-tauri/src/models/WSFdCan/fdcan_c.rs

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]

/* automatically generated by rust-bindgen 0.72.1 */

pub const _VCRT_COMPILER_PREPROCESSOR: u32 = 1;
pub const _SAL_VERSION: u32 = 20;
pub const __SAL_H_VERSION: u32 = 180000000;
pub const _USE_DECLSPECS_FOR_SAL: u32 = 0;
pub const _USE_ATTRIBUTES_FOR_SAL: u32 = 0;
pub const _CRT_PACKING: u32 = 8;
pub const _HAS_EXCEPTIONS: u32 = 1;
pub const _STL_LANG: u32 = 0;
pub const _HAS_CXX17: u32 = 0;
pub const _HAS_CXX20: u32 = 0;
pub const _HAS_CXX23: u32 = 0;
pub const _HAS_CXX26: u32 = 0;
pub const _HAS_NODISCARD: u32 = 0;
pub const WCHAR_MIN: u32 = 0;
pub const WCHAR_MAX: u32 = 65535;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 65535;
pub const ZCAN_USBCANFD_200U: u32 = 41;
pub const VCI_USBCAN_E_U: u32 = 20;
pub const VCI_USBCAN_2E_U: u32 = 21;
pub const STATUS_ERR: u32 = 0;
pub const STATUS_OK: u32 = 1;
pub const STATUS_ONLINE: u32 = 2;
pub const STATUS_OFFLINE: u32 = 3;
pub const STATUS_UNSUPPORTED: u32 = 4;
pub const INVALID_CHANNEL_HANDLE: u32 = 0;
pub const INVALID_DEVICE_HANDLE: u32 = 0;
pub const CAN_EFF_FLAG: u32 = 2147483648;
pub const CAN_RTR_FLAG: u32 = 1073741824;
pub const CAN_ERR_FLAG: u32 = 536870912;
pub const CAN_ID_FLAG: u32 = 536870911;
pub const CAN_SFF_MASK: u32 = 2047;
pub const CAN_EFF_MASK: u32 = 536870911;
pub const CAN_ERR_MASK: u32 = 536870911;
pub const CAN_MAX_DLEN: u32 = 8;
pub const CANFD_MAX_DLEN: u32 = 64;
pub const TYPE_CAN: u32 = 0;
pub const TYPE_CANFD: u32 = 1;
pub type va_list = *mut ::std::os::raw::c_char;
unsafe extern "C" {
    pub fn __va_start(arg1: *mut *mut ::std::os::raw::c_char, ...);
}
pub type __vcrt_bool = bool;
pub type wchar_t = ::std::os::raw::c_ushort;
unsafe extern "C" {
    pub fn __security_init_cookie();
}
unsafe extern "C" {
    pub fn __security_check_cookie(_StackCookie: usize);
}
unsafe extern "C" {
    pub fn __report_gsfailure(_StackCookie: usize) -> !;
}
unsafe extern "C" {
    pub static mut __security_cookie: usize;
}
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
pub type UINT = ::std::os::raw::c_uint;
pub type BYTE = ::std::os::raw::c_uchar;
pub type USHORT = ::std::os::raw::c_ushort;
pub type UCHAR = ::std::os::raw::c_uchar;
pub type DWORD = ::std::os::raw::c_ulong;
pub type ULONG = ::std::os::raw::c_ulong;
pub type PVOID = *mut ::std::os::raw::c_void;
pub type INT = ::std::os::raw::c_int;
pub type CHAR = ::std::os::raw::c_char;
pub type UINT64 = u64;
#[doc = "  \\struct Meta\nNode mata information."]
pub type Meta = _Meta;
#[doc = "  \\struct Pair\nThe KeyValue of the attribute."]
pub type Pair = _Pair;
#[doc = "  \\struct Options\nOptional options for node mata."]
pub type Options = _Options;
#[doc = "  \\struct ConfigNode\n  ConfigNode"]
pub type ConfigNode = _ConfigNode;
#[doc = "  \\struct Options\nOptional options for node mata."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Options {
    #[doc = " Optional data types"]
    pub type_: *const ::std::os::raw::c_char,
    #[doc = " Optional values"]
    pub value: *const ::std::os::raw::c_char,
    #[doc = " Optional description information"]
    pub desc: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _Options"][::std::mem::size_of::<_Options>() - 24usize];
    ["Alignment of _Options"][::std::mem::align_of::<_Options>() - 8usize];
    ["Offset of field: _Options::type_"][::std::mem::offset_of!(_Options, type_) - 0usize];
    ["Offset of field: _Options::value"][::std::mem::offset_of!(_Options, value) - 8usize];
    ["Offset of field: _Options::desc"][::std::mem::offset_of!(_Options, desc) - 16usize];
};
#[doc = "  \\struct Meta\nNode mata information."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Meta {
    pub type_: *const ::std::os::raw::c_char,
    pub desc: *const ::std::os::raw::c_char,
    pub read_only: ::std::os::raw::c_int,
    #[doc = " Tips for input format of configuration items"]
    pub format: *const ::std::os::raw::c_char,
    pub min_value: f64,
    pub max_value: f64,
    pub unit: *const ::std::os::raw::c_char,
    pub delta: f64,
    pub visible: *const ::std::os::raw::c_char,
    pub enable: *const ::std::os::raw::c_char,
    pub editable: ::std::os::raw::c_int,
    pub options: *mut *mut Options,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _Meta"][::std::mem::size_of::<_Meta>() - 96usize];
    ["Alignment of _Meta"][::std::mem::align_of::<_Meta>() - 8usize];
    ["Offset of field: _Meta::type_"][::std::mem::offset_of!(_Meta, type_) - 0usize];
    ["Offset of field: _Meta::desc"][::std::mem::offset_of!(_Meta, desc) - 8usize];
    ["Offset of field: _Meta::read_only"][::std::mem::offset_of!(_Meta, read_only) - 16usize];
    ["Offset of field: _Meta::format"][::std::mem::offset_of!(_Meta, format) - 24usize];
    ["Offset of field: _Meta::min_value"][::std::mem::offset_of!(_Meta, min_value) - 32usize];
    ["Offset of field: _Meta::max_value"][::std::mem::offset_of!(_Meta, max_value) - 40usize];
    ["Offset of field: _Meta::unit"][::std::mem::offset_of!(_Meta, unit) - 48usize];
    ["Offset of field: _Meta::delta"][::std::mem::offset_of!(_Meta, delta) - 56usize];
    ["Offset of field: _Meta::visible"][::std::mem::offset_of!(_Meta, visible) - 64usize];
    ["Offset of field: _Meta::enable"][::std::mem::offset_of!(_Meta, enable) - 72usize];
    ["Offset of field: _Meta::editable"][::std::mem::offset_of!(_Meta, editable) - 80usize];
    ["Offset of field: _Meta::options"][::std::mem::offset_of!(_Meta, options) - 88usize];
};
#[doc = "  \\struct Pair\nThe KeyValue of the attribute."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Pair {
    pub key: *const ::std::os::raw::c_char,
    pub value: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _Pair"][::std::mem::size_of::<_Pair>() - 16usize];
    ["Alignment of _Pair"][::std::mem::align_of::<_Pair>() - 8usize];
    ["Offset of field: _Pair::key"][::std::mem::offset_of!(_Pair, key) - 0usize];
    ["Offset of field: _Pair::value"][::std::mem::offset_of!(_Pair, value) - 8usize];
};
#[doc = "  \\struct ConfigNode\n  ConfigNode"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ConfigNode {
    pub name: *const ::std::os::raw::c_char,
    pub value: *const ::std::os::raw::c_char,
    pub binding_value: *const ::std::os::raw::c_char,
    pub path: *const ::std::os::raw::c_char,
    #[doc = " Configuration item information"]
    pub meta_info: *mut Meta,
    pub children: *mut *mut ConfigNode,
    pub attributes: *mut *mut Pair,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ConfigNode"][::std::mem::size_of::<_ConfigNode>() - 56usize];
    ["Alignment of _ConfigNode"][::std::mem::align_of::<_ConfigNode>() - 8usize];
    ["Offset of field: _ConfigNode::name"][::std::mem::offset_of!(_ConfigNode, name) - 0usize];
    ["Offset of field: _ConfigNode::value"][::std::mem::offset_of!(_ConfigNode, value) - 8usize];
    ["Offset of field: _ConfigNode::binding_value"]
        [::std::mem::offset_of!(_ConfigNode, binding_value) - 16usize];
    ["Offset of field: _ConfigNode::path"][::std::mem::offset_of!(_ConfigNode, path) - 24usize];
    ["Offset of field: _ConfigNode::meta_info"]
        [::std::mem::offset_of!(_ConfigNode, meta_info) - 32usize];
    ["Offset of field: _ConfigNode::children"]
        [::std::mem::offset_of!(_ConfigNode, children) - 40usize];
    ["Offset of field: _ConfigNode::attributes"]
        [::std::mem::offset_of!(_ConfigNode, attributes) - 48usize];
};
#[doc = "Retrieve the description information of the attribute.\n\n \\retval ConfigNode"]
pub type GetPropertysFunc = ::std::option::Option<unsafe extern "C" fn() -> *const ConfigNode>;
#[doc = "Set the value of the attribute of the specified path.\n\\ parameter [in] path: The path of the attribute.\n\\ param [in] value: The value of the attribute.\n\nRetval returns 1 for success and 0 for failure."]
pub type SetValueFunc = ::std::option::Option<
    unsafe extern "C" fn(
        path: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
#[doc = "Retrieve the value of the attribute of the specified path.\n\\ parameter [in] path: The path of the attribute.\nRetval successfully returns the value of the property, while failure returns NULL."]
pub type GetValueFunc = ::std::option::Option<
    unsafe extern "C" fn(path: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagIProperty {
    pub SetValue: SetValueFunc,
    pub GetValue: GetValueFunc,
    pub GetPropertys: GetPropertysFunc,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagIProperty"][::std::mem::size_of::<tagIProperty>() - 24usize];
    ["Alignment of tagIProperty"][::std::mem::align_of::<tagIProperty>() - 8usize];
    ["Offset of field: tagIProperty::SetValue"]
        [::std::mem::offset_of!(tagIProperty, SetValue) - 0usize];
    ["Offset of field: tagIProperty::GetValue"]
        [::std::mem::offset_of!(tagIProperty, GetValue) - 8usize];
    ["Offset of field: tagIProperty::GetPropertys"]
        [::std::mem::offset_of!(tagIProperty, GetPropertys) - 16usize];
};
pub type IProperty = tagIProperty;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct can_frame {
    pub can_id: UINT,
    pub can_dlc: BYTE,
    pub __pad: BYTE,
    pub __res0: BYTE,
    pub __res1: BYTE,
    pub data: [BYTE; 8usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of can_frame"][::std::mem::size_of::<can_frame>() - 16usize];
    ["Alignment of can_frame"][::std::mem::align_of::<can_frame>() - 4usize];
    ["Offset of field: can_frame::can_id"][::std::mem::offset_of!(can_frame, can_id) - 0usize];
    ["Offset of field: can_frame::can_dlc"][::std::mem::offset_of!(can_frame, can_dlc) - 4usize];
    ["Offset of field: can_frame::__pad"][::std::mem::offset_of!(can_frame, __pad) - 5usize];
    ["Offset of field: can_frame::__res0"][::std::mem::offset_of!(can_frame, __res0) - 6usize];
    ["Offset of field: can_frame::__res1"][::std::mem::offset_of!(can_frame, __res1) - 7usize];
    ["Offset of field: can_frame::data"][::std::mem::offset_of!(can_frame, data) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct canfd_frame {
    pub can_id: UINT,
    pub len: BYTE,
    pub flags: BYTE,
    pub __res0: BYTE,
    pub __res1: BYTE,
    pub data: [BYTE; 64usize],
}
